--- a/build.xml
+++ b/build.xml
@@ -1,48 +1,51 @@
 <!--
 
-Quick quack of a build file - needs cleaning up!
+Simple Ant build file for building the project if Maven is not preferred.
+
+Expects junit-4.8.2.jar to be present in the libs dir; the Maven build script does not.
 
 -->
 <project name="java-design-patterns" default="jar" basedir=".">
 	
     <description>
-    	Builds and test design pattern cook book.
+    	Ant build.xml for building and testing the Java design pattern cook book.
     </description>	
 	
     <!-- Directory structure -->
-    <property name="src" location="src/java"/>
-    <property name="tests" location="src/test"/>
-    <property name="build" location="build"/>	
-    <property name="dist"  location="dist"/> 
-    <property name="libs"  location="libs"/>
-    <property name="resources"  location="resources"/>
+    <property name="src.dir" location="src"/>
+    <property name="src.java.dir" location="${src.dir}/java"/>
+	<property name="src.test.dir" location="${src.dir}/test"/>
+	<property name="build.java.dir" location="build/java"/>
+	<property name="build.test.dir" location="build/test"/>
+    <property name="libs.dir" location="libs"/>
+    <property name="resources.dir" location="resources"/>
+    <property name="dist.dir" location="dist"/>
     	
-    <target name="init" description="Grabs current time, creates the build dir if needed">
+    <target name="init" description="Grabs current time, creates the build dirs if needed">
         <tstamp>
             <format property="NOW_GB" pattern="yyyy-MMMM-dd-HHmm" locale="en,GB"/>
         </tstamp>
-        <mkdir dir="${build}"/>
-        <mkdir dir="${build}/tests"/>
+        <mkdir dir="${build.java.dir}"/>
+        <mkdir dir="${build.test.dir}"/>
     </target>
 	
-    <!-- Make sure all the jar dependencies are in your libs folder -->
-    <target name="compile" depends="init" description="Compiles the source" >
-        <javac srcdir="${src}" destdir="${build}">
+    <target name="compile" depends="init" description="Compiles the main source" >
+        <javac srcdir="${src.java.dir}" destdir="${build.java.dir}">
             <classpath>
-                <fileset dir="${libs}">
+                <fileset dir="${libs.dir}">
                     <include name="**/*.jar"/>
                 </fileset>
             </classpath>
         </javac>
     </target>
 	
-    <target name="compile-tests" depends="compile" description="Compiles the source" >
-        <javac srcdir="${tests}" destdir="${build}/tests">
+    <target name="compile-tests" depends="compile" description="Compiles the tests" >
+        <javac srcdir="${src.test.dir}" destdir="${build.test.dir}">
             <classpath>
-                <fileset dir="${libs}">
+                <fileset dir="${libs.dir}">
                     <include name="**/*.jar"/>
                 </fileset>
-            	<pathelement path="${build}"/>
+            	<pathelement path="${build.java.dir}"/>
             </classpath>
         </javac>
     </target>
@@ -50,50 +53,73 @@ Quick quack of a build file - needs cleaning up!
 	<target name="test" depends="compile-tests">
     	<junit showoutput="yes" fork="true">
     	    <classpath>
-    	        <pathelement location="libs/junit-4.8.2.jar"/>
-    	    	<pathelement path="${build}"/>
-                <pathelement path="${build}/tests"/>
+    	        <pathelement location="${libs.dir}/junit-4.8.2.jar"/>
+    	    	<pathelement path="${build.java.dir}"/>
+                <pathelement path="${build.test.dir}"/>
     	    </classpath>
     
     	    <formatter type="plain" usefile="false" />
     
+    		<!-- expects JUnit4 annotations -->
     	    <batchtest>
-    	        <fileset dir="${tests}"/>
+    	        <fileset dir="${src.test.dir}"/>
     	    </batchtest>
     	</junit> 
     </target>
 
-    <target name="jar" depends="test" description="Builds the dist dir if needed, builds the .jar file" >
-        <mkdir dir="${dist}/lib"/>
+    <target name="jar" depends="test" description="Builds the .jar file" >
+        <mkdir dir="${dist.dir}/lib"/>
         <!-- Put everything in ${build} into the ada-engine-${DSTAMP}.jar file - crude artefact versioning for now! -->
-        <jar jarfile="${dist}/lib/java-design-patterns-${NOW_GB}.jar" basedir="${build}"/>
+        <jar jarfile="${dist.dir}/lib/${ant.project.name}-${NOW_GB}.jar" basedir="${build.java.dir}"/>
     </target>
 	
-    <target name="dist"  depends="jar" description="Creates a .zip file of the runtime env for installation" >
-    	
-    	<mkdir dir="${dist}/resources"/>
-    	
-        <copy todir="${dist}/resources">
-            <fileset dir="${resources}" includes="**/*.properties"/>
-        </copy>
-    	
-        <zip destfile="${dist}/zip/java-design-patterns.zip">
+	<target name="jdoc" depends="jar" description="Builds the javadoc" >		
+		<mkdir dir="${dist.dir}/jdoc"/>
+		
+		 <javadoc
+		     destdir="${dist.dir}/jdoc"
+		     author="true"
+		     version="true"
+		     use="true"
+		     windowtitle="Java Design Patterns Cookbook">
+
+		    <fileset dir="${src.dir}" defaultexcludes="yes">
+		      <include name="java/com/gazbert/**"/>
+		      <include name="test/com/gazbert/**"/>
+		    </fileset>
+		 	
+		    <doctitle><![CDATA[<h1>Java Design Patterns Cookbook</h1>]]></doctitle>
         	
-    	    <zipfileset dir="${libs}" prefix="libs"/>
-            <zipfileset dir="${dist}/resources" prefix="resources"/>
+        </javadoc>
+    </target>
+	
+    <target name="dist" depends="jdoc" description="Creates a .zip file of the distribution" >
+    	
+    	<mkdir dir="${dist.dir}/resources"/>
+    	
+        <copy todir="${dist.dir}/resources">
+            <fileset dir="${resources.dir}" includes="**/*.properties"/>
+        </copy>    	    	
+    	
+        <zip destfile="${dist.dir}/zip/${ant.project.name}.zip">
+        	
+    	    <zipfileset dir="${libs.dir}" prefix="libs"/>
+            <zipfileset dir="${dist.dir}/resources" prefix="resources"/>
             <zipfileset dir="." includes="ada.sh"/>
         	
             <zipfileset dir="." includes="LICENSE"/>
             <zipfileset dir="." includes="README.md"/>
             	
-            <!-- Add ada-engine jar!-->
-            <zipfileset dir="${dist}/lib" prefix="libs"/>           	
+            <zipfileset dir="${dist.dir}/lib" prefix="libs"/>  
+        	
+        	<zipfileset dir="${dist.dir}/jdoc" prefix="jdoc"/>
         </zip>
     </target>
 
     <target name="clean" description="Removes the .class files AND the .jar; it nukes build and dist dirs" >
-        <delete dir="${build}"/>
-        <delete dir="${dist}"/>
+        <delete dir="${build.java.dir}"/>
+    	<delete dir="${build.test.dir}"/>
+        <delete dir="${dist.dir}"/>
     </target>
 	
 </project>
