--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.gazbert</groupId>
     <artifactId>java-design-patterns-cookbook</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.2.1</version>
     <name>Java Design Patterns Cookbook</name>
     <description>A cookbook of Design Patterns written in Java.</description>
     <url>http://github.com/gazbert/java-design-patterns</url>
