--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <groupId>com.gazbert</groupId>
   <artifactId>java-design-patterns-cookbook</artifactId>
   <packaging>jar</packaging>
-  <version>1.3.0</version>
+  <version>1.4.0</version>
   <name>Java Design Patterns Cookbook</name>
   <description>A cookbook of Design Patterns written in Java.</description>
   <url>http://github.com/gazbert/java-design-patterns</url>
@@ -42,15 +42,15 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
+        <version>3.11.0</version>
         <configuration>
-          <source>11</source>
-          <target>11</target>
+          <source>17</source>
+          <target>17</target>
         </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>3.3.0</version>
+        <version>3.6.0</version>
         <executions>
           <execution>
             <id>distro-assembly</id>
@@ -69,8 +69,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.3.2</version>
+        <version>3.5.0</version>
         <configuration>
+          <doclint>none</doclint>
         </configuration>
         <executions>
           <execution>
